adding chache